/transtopie/ absolute path

--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
       </div>
     </header>
 
-    <div id="hero" style="background-image:url(/assets/img/backgrounds/bg.jpg) !important">
+    <div id="hero" style="background-image:url(/transtopie/assets/img/backgrounds/bg.jpg) !important">
       <div>
-          <img src="/assets/img/logo.png"/>
+          <img src="/transtopie/assets/img/logo.png"/>
           <h1>Voyage en Hétérotopie</h1>
         </div>
     </div>
 
-        <div id="full-bg" style="background-image:url(/assets/img/backgrounds/bg2.jpg)"></div>
+        <div id="full-bg" style="background-image:url(/transtopie/assets/img/backgrounds/bg2.jpg)"></div>
     <section class="content bloc-img-right">
       <div class="wrapper  straight">
-        <div class="bloc-pic"><img loading="lazy" src="/assets/img/home/rassemblement-exterieur.jpg" alt="Rassemblement dans la cour des Petits Châtelets, à l'occasion d'une soirée repas concert" title="Rassemblement dans la cour des Petits Châtelets, à l'occasion d'une soirée repas concert"></div>
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/home/rassemblement-exterieur.jpg" alt="Rassemblement dans la cour des Petits Châtelets, à l'occasion d'une soirée repas concert" title="Rassemblement dans la cour des Petits Châtelets, à l'occasion d'une soirée repas concert"></div>
         <div class="bloc-text">
           <h2>Association productrice de culture</h2>
           <h3>conceptrice d'événements et créatrice de spectacles</h3>
@@ -149,15 +149,15 @@ Le projet associatif de Transtopie rentre dans le cadre que l’on appelle égal
     <section class="content" id="three-slide">
       <div class="wrapper">
         <ul class="slider">
-          <li class="back"><img loading="lazy" src="/assets/img/home/tables-bar-chapelle.jpg" alt="Tables de bistrot du bar du hall de la Chapelle" title="Tables de bistrot du bar du hall de la Chapelle"></li>
-          <li class="current"><img loading="lazy" src="/assets/img/home/porte-chapelle-en-lumiere.jpg"  alt="La porte de la Chapelle, mise en lumière à l'occasion d'une soirée concert" title="La porte de la Chapelle, mise en lumière à l'occasion d'une soirée concert"></li>
-          <li class="front"><img loading="lazy" src="/assets/img/home/spectacle-aerien-chapelle.jpg" alt="Spectacle de cirque aérien (tissu) et projection vidéo" title="Spectacle de cirque aérien (tissu) et projection vidéo"></li>
+          <li class="back"><img loading="lazy" src="/transtopie/assets/img/home/tables-bar-chapelle.jpg" alt="Tables de bistrot du bar du hall de la Chapelle" title="Tables de bistrot du bar du hall de la Chapelle"></li>
+          <li class="current"><img loading="lazy" src="/transtopie/assets/img/home/porte-chapelle-en-lumiere.jpg"  alt="La porte de la Chapelle, mise en lumière à l'occasion d'une soirée concert" title="La porte de la Chapelle, mise en lumière à l'occasion d'une soirée concert"></li>
+          <li class="front"><img loading="lazy" src="/transtopie/assets/img/home/spectacle-aerien-chapelle.jpg" alt="Spectacle de cirque aérien (tissu) et projection vidéo" title="Spectacle de cirque aérien (tissu) et projection vidéo"></li>
         </ul>
       </div>
     </section>
     <section class="content bloc-img-left">
       <div class="wrapper">
-        <div class="bloc-pic"><img loading="lazy" src="/assets/img/home/concert-scene-bleue-crypte-chapelle.jpg" alt="Concert sur scène en Chapelle: pianiste, chanteuse, et videoprojection." title="Concert sur scène en Chapelle: pianiste, chanteuse, et videoprojection."></div>
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/home/concert-scene-bleue-crypte-chapelle.jpg" alt="Concert sur scène en Chapelle: pianiste, chanteuse, et videoprojection." title="Concert sur scène en Chapelle: pianiste, chanteuse, et videoprojection."></div>
         <div class="bloc-text">
           <h2>Concerts, spectacles, expositions</h2>
           <h3>une programmation riche et diversifiée</h3>
