update path plz

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ Le projet associatif de Transtopie rentre dans le cadre que l’on appelle égal
       <div class="wrapper">
         <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/home/concert-scene-bleue-crypte-chapelle.jpg" alt="Concert sur scène en Chapelle: pianiste, chanteuse, et videoprojection." title="Concert sur scène en Chapelle: pianiste, chanteuse, et videoprojection."></div>
         <div class="bloc-text">
-          <h2>Concerts, spectacles, expositions</h2>
+          <h2>Autre titre</h2>
           <h3>une programmation riche et diversifiée</h3>
           <div class=" ghcms ghcms-prog">
             <p>Depuis 2015, Chapêlmêle propose une programmation quasi hebdomadaire: <a href="/activites-culturelles/#chapelmele-concerts" title="Avec près d'un concert par semaine en moyenne, on programme de tous genres musicaux">concerts</a>, <a href="/activites-culturelles/#chapelmele-spectacles" title="Nos espaces et moyens techniques nous permettent d'accueillir une grande variété de pratiques">spectacles</a>, <a href="/activites-culturelles/#chapelmele-expositions" title="Entre les artistes plasticiens en résidences, et les créateurs (artistes, artisans) installés aux Petits Châtelets, on ne manque pas d'oeuvres à exposer.">expositions</a>, <a href="/activites-culturelles/#festivals" title="Concerts, arts de rue, ou cinéma... tous les prétextes sont bons pour passer quelques jours de festival dans nos jardins">festivals</a>…</p>
