--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="author" href="humans.txt" />
 
 <!--     <link rel="preload" href="/assets/fonts/IntriqueScript_PersonalUse.ttf" as="font" type="font/tff"> -->
-    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="stylesheet" href="/transtopie/assets/css/main.css">
     <!-- <link rel="dns-prefetch preconnect" href="https://data.chapelmele.com" crossorigin="anonymous"/> -->
     
     <!-- https://realfavicongenerator.net/ -->
