--- a/projets-action-culturelle/mythologies/index.html
+++ b/projets-action-culturelle/mythologies/index.html
@@ -60,80 +60,163 @@
       </div>
     </header>
 
-    <div id="hero" style="background-image:url(/transtopie/assets/img/backgrounds/bg.jpg) !important">
+    <div id="hero" class="hero hero-top" style="background-image: url(/transtopie/assets/img/backgrounds/bg2.jpg)" >
       <div>
-        <img src="/transtopie/assets/img/logo.png" alt="Transtopie"/>
-        <h1>Transtopie</h1>
+        <img src="/transtopie/assets/img/logo.png"/>
+          <h1>Mythologies, R.Barthes</h1>
       </div>
     </div>
 
-        <!-- <div id="full-bg" style="background-image:url(/transtopie/assets/img/backgrounds/bg2.jpg)"></div> -->
     <section class="content bloc-img-right">
-      <div class="wrapper  straight">
-        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt="" title=""></div>
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/projets-action-culturelle/mythologies-schema.png" alt=""></div>
         <div class="bloc-text">
-          <h2>Créations & Spectacles</h2>
-          <h3>association productrice de culture</h3>
-          <div class=" ghcms ghcms-presentation">
-            <p>L’association TRANSTOPIE vise à la lutte contre les discriminations par des approches artistiques et culturelles en créant des spectacles, en concevant des programmes d’action culturelle en lien avec les acteurs du territoire ornais, et en faisant la promotion de l’art sous toutes ses formes.
-Les projets montés jusqu’à présent et qui vont se développer au sein de l’association s’inscrivent dans une logique d’intérêt général dans la droite lignée de politiques publiques, c’est-à-dire l’accès à la culture pour tous en développant des projets d’action culturelle à destination des publics éloignés, la lutte contre les discriminations en favorisant l’appui aux pratiques artistiques qui combattent l’homophobie, le sexisme, le racisme et l’antisémitisme.</p><p>
-Le projet associatif de Transtopie rentre dans le cadre que l’on appelle également « l’économie sociale et solidaire des arts et de la culture ». Transtopie permet de renforcer l’identité des artistes et acteurs culturels locaux, reconnus dans leurs champs de compétences et leur rayon d’action. Elle apporte une visibilité à l’échelle régionale et propose un accompagnement au développement de projets. S’appuyant sur la solidarité entre les acteurs, elle développe des axes de mutualisation et de coopération dans la création de spectacles et d’événements sur-mesur</p>
-          </div>
-          <div class="bloc-links-list">
-            <a class="bloc-link" href="/creations/" title="">Créations & Spéctacles</a>
+          <h2>Système sémiologique</h2><h3> second</h3>
+          <div class="ghcms ghcms-presentation">
+            <p>
+
+Dans le mythe, on retrouve ces 3 termes : signifiant, signifié, signe. Il se base sur une chaîne sémiologique qui existe avant lui. « C’est un système sémiologique second ».
+
+
+Les signes ( langue proprement dite, photographie, peinture, affiche, rite, objet ), se ramènent à une pure fonction signifiante.
+
+"Ils sont la matière qui servira au mythe, par un signifié qu’on lui associera".
+
+
+Dans le premier système sémiologique, on y trouve le système linguistique, la langue, que Roland Barthes définit par « langage-objet ». Car le mythe se saisit de ce langage-objet pour construire son propre système.
+
+Dans le second, le mythe est un méta-langage. Le mythe est en effet une langue, qui s’appuie sur des signes du premier ( langue ou images ).
+</p>
           </div>
         </div>
       </div>
     </section>
-<section class="content" id="three-slide">
-      <div class="wrapper">
-        <ul class="slider">
-          <li class="back"><img loading="lazy" src="/transtopie/assets/img/spectacles/enfer-me-ment.png" alt="" title=""></li>
-          <li class="current"><img loading="lazy" src="/transtopie/assets/img/spectacles/born-to-be-queer.png"  alt="" title=""></li>
-          <li class="front"><img loading="lazy" src="/transtopie/assets/img/spectacles/resonance.png" alt="" title=""></li>
-        </ul>
-      </div>
-    </section>
 
-    <section class="content bloc-left">
+    <section class="content bloc-img-left">
       <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/projets-action-culturelle/soldat-noir.jpg" alt=""></div>
         <div class="bloc-text">
-          <h2>Voyage en Hétérotopie</h2>
-          <h3>programmes d’action culturelle</h3>
-          <div class=" ghcms ghcms-residences">
-            <p>Lutte contre les discriminations par des approches artistiques et culturelles</p>
-            <p>Des projets qui s’inscrivent dans une logique d’intérêt général, d’accès à la culture pour tous,  à destination des publics éloignés</p><p>
-            la lutte contre les discriminations en favorisant l’appui aux pratiques artistiques qui combattent l’homophobie, le sexisme, le racisme et l’antisémitisme.</p>
-            <p>Transtopie vise à renforcer l’identité des artistes et acteurs culturels locaux, reconnus dans leurs champs de compétences et leur rayon d’action. Elle apporte une visibilité à l’échelle régionale et propose un accompagnement au développement de projets. S’appuyant sur la solidarité entre les acteurs, elle développe des axes de mutualisation et de coopération dans la création de spectacles et d’événements sur-mesure</p>
+          <h2>Exemple de parole mythique:</h2><h3> le soldat noir</h3>
+          <div class="ghcms ghcms-1">
+             
+
+En première page de Paris Match, la photographie d’un soldat noir vêtu d’un uniforme français faisant le salut militaire sous le drapeau français.
+
+La photographie a un sens, celui du soldat qui fait le salut. Ce qu’elle signifie, en second lieu, c’est que la France est un grand Empire, que chacun de ses fils sert, sans distinction de couleur.
+
+« Je me trouve donc devant un système sémiologique majoré : il y a un signifiant formé lui même déjà d’un système préalable ( un soldat noir fait le salut militaire ) ; il y a un signifié ( c’est ici un mélange de francité et de militarité ). Il y a enfin une présence du signifié au signifiant. »
+
+Roland Barthes formalise ici la terminologie des mots signifiants/signifié/signe dans chacun des deux systèmes sémiologiques.
+
+
+Le signe du premier système sémiologique , qui devient signifiant du mythe est appelé forme.
+
+Le signifié du mythe est appelé concept.
+
+Le signe final est appelé signification du mythe : La forme.
+
+Définition du mythe : c’est ce jeu incessant de cache-cache entre le sens et la forme qui définit le mythe.
+
+
+Attention : la forme du mythe n’est pas un symbole : le nègre qui salue n’est pas le symbole de l’Empire Français, il a trop de présence pour cela. L’image est trop riche, trop « vécue » et a bien une signification dans son premier signe. 
           </div>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Action Culturelle</a>
         </div>
       </div>
-      <div class="placeholder"></div>
     </section>
 
-    <div class="hera"><div style="background-image: url(/transtopie/assets/img/malou.jpeg)" ></div></div>
 
-    <section class="content bloc-right">
+    <section class="content bloc-img-right">
       <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/projets-action-culturelle/mythologies-schema-2.png" alt=""></div>
         <div class="bloc-text">
-          <h2>Arts et Territoires</h2>
-          <h3>rencontres, festivals, développement artistique local</h3>
-          <div class=" ghcms ghcms-residences">
-            <p>Des soirées spectacle, des scénographies sonores ou des parcours artistiques uniques et originaux sont pensés liés à un lieu, un thème ou un événement. </p>
-            <p>Chaque événement est conçu dans l'échange avec les organisateurs et les habitants, en offrant des propositions clé en main.</p>
-            <p>Comme un panier d'Amap, le panier culturel est une sélection de spectacles, objets d'art et ateliers de pratique artistique pour se découvrir de nouvelles passions et profiter du meilleur des propositions artistiques locales d'Alençon et sa région. </p>
-            <p>Pour le maintien d'une culture locale et d'alternatives en matière de création artistique </p>
+          <h2>Le concept</h2><h3>  le signifié du mythe</h3>
+          <div class="ghcms ghcms-2">
+            <p> Le concept est le signifié du mythe. Il est déterminé, intentionnel : « il est le mobile qui fait proférer le mythe ». Contrairement au signifiant qu’est la forme, le concept n’est nullement abstrait : il est plein d’une situation.
+
+
+Illustration par l’exemple :
+
+Dans l’image du noir qui salue, comme forme, le sens en est appauvri. Comme concept de l’impérialité française, le sens est riche, lié à la totalité du monde : à l’histoire de la France, ses aventures coloniales, ses difficultés.
+
+
+Le concept est un signifié, et peut avoir plusieurs signifiants.
+
+
+Le concept lui est quantitativement pauvre, face à la diversité des signifiants. Peu de concepts véhiculés, sur multitude de signifiants. « Cette répétition du concept à travers des formes différentes permet de déchiffrer le mythe. C’est l’insistance dans une conduite qui livre son intention ».
+
+Les concepts mythiques se font, et se défont dans le temps. </p>
           </div>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Evenements</a>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Panier Culture</a>
         </div>
       </div>
-      <div class="placeholder"></div>
     </section>
 
-<!-- 
-    <script type="text/javascript">document.getElementById('header-title').innerText = "Site en construction";</script> -->    <footer id="footer">
+    <section class="content bloc-img-left">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="" alt=""></div>
+        <div class="bloc-text">
+          <h2>Signification</h2><h3> signifiant et signifié</h3>
+          <div class="ghcms ghcms-1">
+             
+ Le troisième terme, la signification, est la corrélation entre les 2 termes : signifiant et signifié.
+
+Le rapport qui unit le sens et le concept est essentiellement une déformation.
+
+Il a un caractère « impératif », interpellatoire. C’est moi qui vient le chercher, il est tourné vers moi. 
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <section class="content bloc-img-right">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="" alt=""></div>
+        <div class="bloc-text">
+          <h2>La lecture</h2><h3>  du mythe</h3>
+          <div class="ghcms ghcms-2">
+            <p>  1. Si je pars d’un concept, et veut y associer une forme, je produis un mythe. Comme un publicitaire, ou rédacteur de presse. Le système est simple, la signification redevient littérale. Le noir qui salue n’est alors un exemple , un symbole de l’impérialité française.
+
+
+2. Si je pars de la forme, et distingue le sens de la forme, j’explique le mythe, je démystifie, je le déchiffre.
+
+
+Ces deux lectures sont d’ordre statique, analytique. Elles détruisent le mythe à l’instant où j’affiche l’intention ou en la démasquant.
+
+
+3. La troisième pratique du mythe, dynamique : je laisse au mythe ce jeu de cache-cache entre le sens et la forme. Le mythe reste une présence, vécu comme une histoire vraie et irréelle.
+
+Si l’intention est trop obscure, le mythe devient inefficace. Si elle est trop clairement visible, elle est artificielle.
+
+L’issue du mythe, c’est de ne rien cacher, et de ne rien afficher.
+
+
+Il doit être de l’ordre de la nature. « Nous sommes ici au principe même du mythe : il transforme l’histoire en nature ». </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="content bloc-img-left">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="" alt=""></div>
+        <div class="bloc-text">
+          <h2>Conclusion</h2><h3> transformer un sens en forme</h3>
+          <div class="ghcms ghcms-1">
+              Le propre du mythe est de transformer un sens en forme.
+
+
+Le mythe est un langage méta-communicatif, c’est à dire se fondant sur une communication, un langage de signes déjà constitués.
+
+
+Sa double articulation autour de la forme, qui peut être vide ou pleine, laisse une ambiguité. Cette ambiguité rend visible ou invisible un signifié.
+
+
+Elle est une intention, une interpellation. 
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer id="footer">
       <div class="wrapper">
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
