--- a/creations/index.html
+++ b/creations/index.html
@@ -60,80 +60,93 @@
       </div>
     </header>
 
-    <div id="hero" style="background-image:url(/transtopie/assets/img/backgrounds/bg.jpg) !important">
+    <div id="hero" class="hero hero-top" style="background-image: url(/transtopie/assets/img/backgrounds/bg2.jpg)" >
       <div>
-        <img src="/transtopie/assets/img/logo.png" alt="Transtopie"/>
-        <h1>Transtopie</h1>
+        <img src="/transtopie/assets/img/logo.png"/>
+          <h1>Spectacles</h1>
       </div>
     </div>
 
-        <!-- <div id="full-bg" style="background-image:url(/transtopie/assets/img/backgrounds/bg2.jpg)"></div> -->
     <section class="content bloc-img-right">
-      <div class="wrapper  straight">
-        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt="" title=""></div>
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt=""></div>
         <div class="bloc-text">
-          <h2>Créations & Spectacles</h2>
-          <h3>association productrice de culture</h3>
-          <div class=" ghcms ghcms-presentation">
-            <p>L’association TRANSTOPIE vise à la lutte contre les discriminations par des approches artistiques et culturelles en créant des spectacles, en concevant des programmes d’action culturelle en lien avec les acteurs du territoire ornais, et en faisant la promotion de l’art sous toutes ses formes.
-Les projets montés jusqu’à présent et qui vont se développer au sein de l’association s’inscrivent dans une logique d’intérêt général dans la droite lignée de politiques publiques, c’est-à-dire l’accès à la culture pour tous en développant des projets d’action culturelle à destination des publics éloignés, la lutte contre les discriminations en favorisant l’appui aux pratiques artistiques qui combattent l’homophobie, le sexisme, le racisme et l’antisémitisme.</p><p>
-Le projet associatif de Transtopie rentre dans le cadre que l’on appelle également « l’économie sociale et solidaire des arts et de la culture ». Transtopie permet de renforcer l’identité des artistes et acteurs culturels locaux, reconnus dans leurs champs de compétences et leur rayon d’action. Elle apporte une visibilité à l’échelle régionale et propose un accompagnement au développement de projets. S’appuyant sur la solidarité entre les acteurs, elle développe des axes de mutualisation et de coopération dans la création de spectacles et d’événements sur-mesur</p>
-          </div>
-          <div class="bloc-links-list">
-            <a class="bloc-link" href="/creations/" title="">Créations & Spéctacles</a>
+          <h2>La rue fait mauvais genre</h2><h3>conte audiovisuel</h3>
+          <div class="ghcms ghcms-presentation">
+            <p>Quel rapport entretient la femme à l'espace public la nuit ? La rue, de nuit, jongle entre ombre et lumière. La nuit porte en elle les paradoxes de la ville lumière, festive, permissive comme la crainte du sombre, de l'inconnu, du danger. </p>
+            <p>
+
+Cette performance questionne le rapport de la femme à la rue la nuit et dénonce la misogynie banalisée qui l'occupe. La ville comme danger de lieu de vie pour les femmes est une construction sociale à laquelle nous ne pouvons pas déroger actuellement. Ainsi, cette performance se propose d’exposer une série de situations ordinaires qui se passent dans la rue sous l’angle du regard critique sur les dangers et intimidations que subissent les femmes au quotidien. Plaçons la question des rapports de genres en ville au cœur des préoccupations et invitons à se réapproprier de manière égalitaire l'espace public.</p>
           </div>
         </div>
       </div>
     </section>
-<section class="content" id="three-slide">
-      <div class="wrapper">
-        <ul class="slider">
-          <li class="back"><img loading="lazy" src="/transtopie/assets/img/spectacles/enfer-me-ment.png" alt="" title=""></li>
-          <li class="current"><img loading="lazy" src="/transtopie/assets/img/spectacles/born-to-be-queer.png"  alt="" title=""></li>
-          <li class="front"><img loading="lazy" src="/transtopie/assets/img/spectacles/resonance.png" alt="" title=""></li>
-        </ul>
-      </div>
-    </section>
 
-    <section class="content bloc-left">
+    <section class="content bloc-img-left">
       <div class="wrapper">
+        <div class="bloc-vid">
+          <iframe src="//v.calameo.com/?bkcode=006058682b52dc5e5af2d&amp;mode=mini" scrolling="no" allowtransparency="" allowfullscreen="allowfullscreen" style="margin:0 auto;" width="480" height="300" frameborder="0"></iframe>
+        </div>
         <div class="bloc-text">
-          <h2>Voyage en Hétérotopie</h2>
-          <h3>programmes d’action culturelle</h3>
-          <div class=" ghcms ghcms-residences">
-            <p>Lutte contre les discriminations par des approches artistiques et culturelles</p>
-            <p>Des projets qui s’inscrivent dans une logique d’intérêt général, d’accès à la culture pour tous,  à destination des publics éloignés</p><p>
-            la lutte contre les discriminations en favorisant l’appui aux pratiques artistiques qui combattent l’homophobie, le sexisme, le racisme et l’antisémitisme.</p>
-            <p>Transtopie vise à renforcer l’identité des artistes et acteurs culturels locaux, reconnus dans leurs champs de compétences et leur rayon d’action. Elle apporte une visibilité à l’échelle régionale et propose un accompagnement au développement de projets. S’appuyant sur la solidarité entre les acteurs, elle développe des axes de mutualisation et de coopération dans la création de spectacles et d’événements sur-mesure</p>
+          <h2>L'espace public des femmes</h2><h3>lieu de tous  les dangers</h3>
+          <div class="ghcms ghcms-1">
+            Ce spectacle invite particulièrement les femmes à se questionner sur leur rapport à l’espace public, souvent perçu comme le lieu de tous les dangers, en interrogeant les risques. Les femmes utilisent l’espace public, c’est-à-dire accessible à tous et gratuit, de manière différente  des hommes la nuit, par peur des incivilités et agressions mais également du fait d’un sentiment d’insécurité généré par les injonctions sociales auxquelles elles sont sujettes. À quel point ces perceptions d’insécurité sont-elles socialement construites ? Et comment pouvons-nous les renverser ?
+            <a href="https://www.calameo.com/books/006058682b52dc5e5af2d" target="_blank">Docs Présentation La Rue Fait Mauvais Genre Transtopie</a>
           </div>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Action Culturelle</a>
+<!--           <iframe src="https://www.mixcloud.com/widget/iframe/?hide_cover=1&amp;feed=%2FKolectiv_webradio%2F24-novembre-2020-itw-malou-estenne-la-rue-fait-mauvais-genre%2F" width="100%" height="120" frameborder="0"></iframe>
+            <iframe id="cc-m-video-container-12631597726" class="cc-m-video-container" src="https://www.youtube-nocookie.com/embed/GZxMGZvvBxo?wmode=transparent&amp;vq=hd1080" allowfullscreen="true" frameborder="0"></iframe> -->
         </div>
       </div>
-      <div class="placeholder"></div>
     </section>
 
-    <div class="hera"><div style="background-image: url(/transtopie/assets/img/malou.jpeg)" ></div></div>
 
-    <section class="content bloc-right">
+    <section class="content bloc-img-right">
       <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/born-to-be-queer.png" alt=""></div>
         <div class="bloc-text">
-          <h2>Arts et Territoires</h2>
-          <h3>rencontres, festivals, développement artistique local</h3>
-          <div class=" ghcms ghcms-residences">
-            <p>Des soirées spectacle, des scénographies sonores ou des parcours artistiques uniques et originaux sont pensés liés à un lieu, un thème ou un événement. </p>
-            <p>Chaque événement est conçu dans l'échange avec les organisateurs et les habitants, en offrant des propositions clé en main.</p>
-            <p>Comme un panier d'Amap, le panier culturel est une sélection de spectacles, objets d'art et ateliers de pratique artistique pour se découvrir de nouvelles passions et profiter du meilleur des propositions artistiques locales d'Alençon et sa région. </p>
-            <p>Pour le maintien d'une culture locale et d'alternatives en matière de création artistique </p>
+          <h2>Born to be Queer</h2><h3>conférence gesticulée</h3>
+          <div class="ghcms ghcms-2">
+            <iframe src="//v.calameo.com/?bkcode=0060586827ba0756ec020" scrolling="no" allowtransparency="" allowfullscreen="allowfullscreen" style="margin:0 auto;" width="480" height="300" frameborder="0"></iframe>
           </div>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Evenements</a>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Panier Culture</a>
         </div>
       </div>
-      <div class="placeholder"></div>
     </section>
 
-<!-- 
-    <script type="text/javascript">document.getElementById('header-title').innerText = "Site en construction";</script> -->    <footer id="footer">
+    <section class="content bloc-img-left">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/enfer-me-ment.png"></div>
+        <div class="bloc-text">
+          <h2>L'enfer me ment</h2><h3>performance sonore fictionnelle et live painting monumental</h3>
+          <div class="ghcms ghcms-1">
+         <iframe src="//v.calameo.com/?bkcode=0060586824bd93ee1517f&amp;mode=mini" scrolling="no" allowtransparency="" allowfullscreen="allowfullscreen" style="margin:0 auto;" width="480" height="300" frameborder="0"></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+    <div class="hera"><div style="background-image: url(/transtopie/assets/img/spectacles/resonance-chatelets.jpg)" ></div></div>
+
+    <section class="content bloc-img-right">
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/resonance-chatelets.jpg" alt=""></div>
+        <div class="bloc-text">
+          <h2>Résonances</h2><h3>création musicale sur-mesure</h3>
+          <div class="ghcms ghcms-2">
+
+
+Dans le cadre du projet DRAC et DRDJSCS C'est mon patrimoine visant à valoriser la mémoire du site patrimonial des Petits Châtelets, Transtopie a proposé une création sur-mesure sous forme de concert. 
+
+Cette création s'est appuyée sur la collecte de documents d'archives authentiques issus de la congrégation religieuse des Sœurs Marie-Joseph du Dorat de la Solitude des Petits Châtelets de 1855 à 2008. 
+
+En partenariat avec les archives départementales de l'Orne et municipales d'Alençon, ce travail d'historien a donné lieu à une composition poétique enveloppée du mélange des sons du site et d'une touche expérimentale par trois artistes. 
+
+Mehdi Meskini aux textes, Pierre Fourmeau à la composition musicale, et Clément Béguet à la trompette, ont délivré lors du vernissage de l'exposition "Les petits Châtelets, d'hier à aujourd'hui" une pièce émouvante et fidèle au passé qui a marqué les esprits du public, à qui cette création a fait résonance.  
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer id="footer">
       <div class="wrapper">
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
