--- a/projets-action-culturelle/faut-il-expliquer-l-art/index.html
+++ b/projets-action-culturelle/faut-il-expliquer-l-art/index.html
@@ -60,80 +60,72 @@
       </div>
     </header>
 
-    <div id="hero" style="background-image:url(/transtopie/assets/img/backgrounds/bg.jpg) !important">
+    <div id="hero" class="hero hero-top" style="background-image: url(/transtopie/assets/img/backgrounds/bg2.jpg)" >
       <div>
-        <img src="/transtopie/assets/img/logo.png" alt="Transtopie"/>
-        <h1>Transtopie</h1>
+        <img src="/transtopie/assets/img/logo.png"/>
+          <h1>Faut-il expliquer l'art ?</h1>
       </div>
     </div>
 
-        <!-- <div id="full-bg" style="background-image:url(/transtopie/assets/img/backgrounds/bg2.jpg)"></div> -->
     <section class="content bloc-img-right">
-      <div class="wrapper  straight">
-        <div class="bloc-pic"><img loading="lazy" src="/transtopie/assets/img/spectacles/rue-fait-mauvais-genre.png" alt="" title=""></div>
+      <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="" alt=""></div>
         <div class="bloc-text">
-          <h2>Créations & Spectacles</h2>
-          <h3>association productrice de culture</h3>
-          <div class=" ghcms ghcms-presentation">
-            <p>L’association TRANSTOPIE vise à la lutte contre les discriminations par des approches artistiques et culturelles en créant des spectacles, en concevant des programmes d’action culturelle en lien avec les acteurs du territoire ornais, et en faisant la promotion de l’art sous toutes ses formes.
-Les projets montés jusqu’à présent et qui vont se développer au sein de l’association s’inscrivent dans une logique d’intérêt général dans la droite lignée de politiques publiques, c’est-à-dire l’accès à la culture pour tous en développant des projets d’action culturelle à destination des publics éloignés, la lutte contre les discriminations en favorisant l’appui aux pratiques artistiques qui combattent l’homophobie, le sexisme, le racisme et l’antisémitisme.</p><p>
-Le projet associatif de Transtopie rentre dans le cadre que l’on appelle également « l’économie sociale et solidaire des arts et de la culture ». Transtopie permet de renforcer l’identité des artistes et acteurs culturels locaux, reconnus dans leurs champs de compétences et leur rayon d’action. Elle apporte une visibilité à l’échelle régionale et propose un accompagnement au développement de projets. S’appuyant sur la solidarité entre les acteurs, elle développe des axes de mutualisation et de coopération dans la création de spectacles et d’événements sur-mesur</p>
-          </div>
-          <div class="bloc-links-list">
-            <a class="bloc-link" href="/creations/" title="">Créations & Spéctacles</a>
+          <h2>Faut-il expliquer</h2><h3> l'art ?</h3>
+          <div class="ghcms ghcms-presentation">
+            <p>L'opinion affirme souvent que l'oeuvre d'art aurait un sens précis, celui que l'auteur lui a donné et qu'il faut donc la déchiffrer par un effort intellectuel. Mais l'amateur reçoit l'oeuvre à travers son corps et son esprit sans disposer d'un code qui permettrait de la déterminer... </p>
           </div>
         </div>
       </div>
     </section>
-<section class="content" id="three-slide">
-      <div class="wrapper">
-        <ul class="slider">
-          <li class="back"><img loading="lazy" src="/transtopie/assets/img/spectacles/enfer-me-ment.png" alt="" title=""></li>
-          <li class="current"><img loading="lazy" src="/transtopie/assets/img/spectacles/born-to-be-queer.png"  alt="" title=""></li>
-          <li class="front"><img loading="lazy" src="/transtopie/assets/img/spectacles/resonance.png" alt="" title=""></li>
-        </ul>
-      </div>
-    </section>
 
-    <section class="content bloc-left">
+    <section class="content bloc-img-left">
       <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src=""></div>
         <div class="bloc-text">
-          <h2>Voyage en Hétérotopie</h2>
-          <h3>programmes d’action culturelle</h3>
-          <div class=" ghcms ghcms-residences">
-            <p>Lutte contre les discriminations par des approches artistiques et culturelles</p>
-            <p>Des projets qui s’inscrivent dans une logique d’intérêt général, d’accès à la culture pour tous,  à destination des publics éloignés</p><p>
-            la lutte contre les discriminations en favorisant l’appui aux pratiques artistiques qui combattent l’homophobie, le sexisme, le racisme et l’antisémitisme.</p>
-            <p>Transtopie vise à renforcer l’identité des artistes et acteurs culturels locaux, reconnus dans leurs champs de compétences et leur rayon d’action. Elle apporte une visibilité à l’échelle régionale et propose un accompagnement au développement de projets. S’appuyant sur la solidarité entre les acteurs, elle développe des axes de mutualisation et de coopération dans la création de spectacles et d’événements sur-mesure</p>
+          <h2>Il n'est nul besoin d'être « cultivé »</h2><h3> pour comprendre une oeuvre d'art</h3>
+          <div class="ghcms ghcms-1">
+             Il est possible de comprendre une oeuvre d'art, au sens de compréhension globale, de saisie intuitive.
+
+En effet, l'oeuvre d'art est un recueil de perceptions. Elle ne se matérialise que par l'un de nos sens : la vue, l'audition, le goût, l'odorat, le toucher. 
+
+Au premier contact avec l'oeuvre, ne faut-il pas être perdu ? Ne pas tout comprendre, mélanger, se tromper ?
+
+
+Et puis, ne retrouvons-nous pas cette volonté de faire de l'oeuvre d'art une expérience individuelle subjective dans l'art contemporain ? Ce même courant, considéré par Nathalie Heinich comme nouveau paradigme, demande aussi à faire tomber le formatage préalable. C'est sans doute pourquoi les enfants sont plus sensibles et ouverts sur cette nouvelle forme d'art que beaucoup d'adultes à qui on a enseigné ce qu'était l'art. 
+
+
+Il est impossible de comprendre une oeuvre d'art si on entend par là simplement  une somme d'explications produites sur l'oeuvre. 
+
+
+Le choc avec les oeuvres est susceptible de transformer le spectateur, de le faire changer de regard. 
           </div>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Action Culturelle</a>
         </div>
       </div>
-      <div class="placeholder"></div>
     </section>
 
-    <div class="hera"><div style="background-image: url(/transtopie/assets/img/malou.jpeg)" ></div></div>
 
-    <section class="content bloc-right">
+    <section class="content bloc-img-right">
       <div class="wrapper">
+        <div class="bloc-pic"><img loading="lazy" src="" alt=""></div>
         <div class="bloc-text">
-          <h2>Arts et Territoires</h2>
-          <h3>rencontres, festivals, développement artistique local</h3>
-          <div class=" ghcms ghcms-residences">
-            <p>Des soirées spectacle, des scénographies sonores ou des parcours artistiques uniques et originaux sont pensés liés à un lieu, un thème ou un événement. </p>
-            <p>Chaque événement est conçu dans l'échange avec les organisateurs et les habitants, en offrant des propositions clé en main.</p>
-            <p>Comme un panier d'Amap, le panier culturel est une sélection de spectacles, objets d'art et ateliers de pratique artistique pour se découvrir de nouvelles passions et profiter du meilleur des propositions artistiques locales d'Alençon et sa région. </p>
-            <p>Pour le maintien d'une culture locale et d'alternatives en matière de création artistique </p>
+          <h2>Une éducation à l'art est nécessaire</h2><h3> pour stimuler la curiosité</h3>
+          <div class="ghcms ghcms-2">
+            <p> Il est démontré que la réceptivité face à l'art dépend de l'éducation. Apprendre à construire son jugement est la matrice de l'appréciation de l'art. Cet apprentissage requiert un long développement. Tout comme l'apprentissage d'un instrument de musique demande de la volonté, de l'exercice et de la persévérance. 
+
+ 
+
+Michel Onfray parle en l'occurrence de la fabrication d'un goût. "Peu importe l'objet de ce goût (un vin, une cuisine, une peinture, un morceau de musique, une architecture, un livre de philosophie, un poème), on ne parvient à l'apprécier qu'en ayant accepté d'apprendre à juger."
+
+Ainsi, proposer une diversité dans les produits alimentaires de l'enfant l'incitera à former son gout par la comparaison, la sélection. Une chose m'a surprise lorsque j'ai demandé à un ami tanzanien de définir ce qu'il préférait manger. Il m'a répondu avec la plus grande sincérité qu'il adorait l'ugali, cette purée de mais qu'il mange tous les jours depuis son enfance. A mes yeux, ce plat ne semblait être que le moyen de subsistance bon marché d'une population entière. Ce même ami, invité chez moi, refusait de gouter les plats que j'avais préparé qui sortait de son ordinaire. Enfermé dans sa gastronomie monochrome, il n'avait aucun désir de découvrir l'inconnu. 
+
+ 
+
+C'est donc dans l'éducation que se forme l'esprit critique, cette disposition à examiner attentivement avant d'en établir la validité. 
           </div>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Evenements</a>
-          <a class="bloc-link" href="/residences-artistiques-normandie/" title="Présentation des conditions d'accueil pour nos résidences artistiques">Panier Culture</a>
         </div>
       </div>
-      <div class="placeholder"></div>
-    </section>
-
-<!-- 
-    <script type="text/javascript">document.getElementById('header-title').innerText = "Site en construction";</script> -->    <footer id="footer">
+    </section>    <footer id="footer">
       <div class="wrapper">
         <div id="contact-info">
           <p><a title="Transtopie par email" href="mailto:transtopies@gmail.com">transtopies@gmail.com</a></p>
